--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
   "type": "commonjs",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "dev" : "nodemon src/index.js"
   },
   "dependencies": {
-    "mongoose": "^9.1.3"
+    "mongoose": "^9.1.3",
+    "nodemon": "^3.1.11"
   }
 }
