--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
   "type": "commonjs",
   "main": "server.js",
   "scripts": {
-    "dev" : "nodemon src/index.js"
+    "dev": "nodemon src/index.js"
   },
   "dependencies": {
-    "mongoose": "^9.1.3",
-    "nodemon": "^3.1.11"
+    "mongoose": "^9.1.3"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.11",
+    "prettier": "^3.8.0"
   }
 }
