--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "a tutorial backend",
   "license": "ISC",
   "author": "Aditya Gupta",
-  "type": "commonjs",
-  "main": "server.js",
+  "type": "module",
+  "main": "index.js",
   "scripts": {
     "dev": "nodemon src/index.js"
+    
   },
   "dependencies": {
+    "dotenv": "^17.2.3",
+    "express": "^5.2.1",
     "mongoose": "^9.1.3"
   },
   "devDependencies": {
